<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.svalero.bookApp.view.AddBookView">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/book_name_label"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/yearTextNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/year_edition_book_label"
            android:inputType="number"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/pagesTextNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/page_number_book_label"
            android:inputType="number"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/description_label"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <CheckBox
            android:id="@+id/cbAddBookRead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ebook" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/imv_add_book"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <ImageView
            android:id="@+id/book_add_image"
            android:layout_width="match_parent"
            android:layout_height="810dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/imv_add_book"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/add_book_button"
            android:layout_width="136dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:onClick="addButton"
            android:text="@string/add_button" />


        <Button
            android:id="@+id/cancel_add_book_button"
            android:layout_width="136dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:onClick="cancelButton"
            android:text="@string/cancel_button" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>