<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.svalero.bookApp.view.ModifyBookView">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/nameModifyEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/book_name_label"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/yearModifyTextNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/year_edition_book_label"
            android:inputType="number"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/pagesModifyTextNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/page_number_book_label"
            android:inputType="number"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/descriptionModifyEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/description_label"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <CheckBox
            android:id="@+id/checkBoxRead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:clickable="true"
            android:text="Read" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/confirm_modify_book_button"
            android:layout_width="136dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            style="@style/Widget.Material3.Button.Icon"
            android:onClick="modifyButton"
            android:text="@string/confirm_button"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/cancel_modify_book_button"
            android:layout_width="136dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            style="@style/Widget.Material3.Button.Icon"
            android:onClick="cancelModifyButton"
            android:text="@string/cancel_button"
            android:textSize="15sp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>