<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="415dp"
        android:layout_height="648dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/main_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/image_description"
            app:srcCompat="@drawable/book"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/main_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_menu_title"
            android:textAlignment="center"
            android:textColor="@color/teal_700"
            android:textSize="34sp" />

        <Button
            android:id="@+id/book_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:padding="10dp"
            android:text="@string/books" />

        <Button
            android:id="@+id/library_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:text="@string/libraries" />

<!--        <Button-->
<!--            android:id="@+id/publisher_list"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="25dp"-->
<!--            android:layout_marginEnd="25dp"-->
<!--            android:text="@string/publishers" />-->
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>